# Bioinfo2_Uebung04

./: README.md
Uebung04/: CMakeLists.txt  OverRepresentationAnalysis.cpp  OverRepresentationAnalysis.hpp  biological_processes.txt  ora.cpp  reference_set.txt  test_set.txt
Uebung04/tests/: CMakeLists.txt  ORA_tests.cpp
